--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,7 @@
 # Base url
-NEXT_PUBLIC_BASE_URL=https://dev.cool-3c.de/
+NEXT_PUBLIC_BASE_URL=http://localhost:3001/
+
+NEXT_PUBLIC_JOKO_OATH_URL=http://localhost:3000/
 
 # CDN Stuff
 NEXT_PUBLIC_CDN_ASSETS_URL=/
@@ -7,3 +9,7 @@ NEXT_PUBLIC_CDN_ASSETS_URL=/
 # Our C# backend
 # NEXT_PUBLIC_API=http://localhost:2015/api
 NEXT_PUBLIC_API=
+
+
+
+
