--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
-NEXT_PUBLIC_BASE_URL=https://cool3c.letgo.com.tw/
+NEXT_PUBLIC_BASE_URL=https://oauth-nextjs.letgo.com.tw/
 
-NEXT_PUBLIC_JOKO_OATH_URL=https://ouath.letgo.com.tw/
+NEXT_PUBLIC_JOKO_OATH_URL=https://oauth-nestjs-api.letgo.com.tw/
