--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,5 @@
 NEXT_PUBLIC_BASE_URL=https://oauth-nextjs.letgo.com.tw/
 
 NEXT_PUBLIC_JOKO_OATH_URL=https://oauth-nestjs-api.letgo.com.tw/
+
+NEXT_PUBLIC_CDN_ASSETS_URL=/
