--- a/.env.development
+++ b/.env.development
@@ -1,14 +1,12 @@
 # Base url
 NEXT_PUBLIC_BASE_URL=http://localhost:3001/
 
-NEXT_PUBLIC_JOKO_OATH_URL=http://localhost:3000/
+NEXT_PUBLIC_JOKO_OATH_URL=https://oauth-nestjs-api.letgo.com.tw/
 
 # CDN Stuff
 NEXT_PUBLIC_CDN_ASSETS_URL=/
 
-# Our C# backend
-# NEXT_PUBLIC_API=http://localhost:2015/api
-NEXT_PUBLIC_API=
+
 
 
 
