fix clinet id issue

--- a/.env
+++ b/.env
@@ -4,6 +4,9 @@ NEXT_PUBLIC_SITE_URL=/
 # CDN Stuff
 NEXT_PUBLIC_CDN_CONTENT_URL=/
 
+# Oath Stuff
+NEXT_PUBLIC_JOKO_OATH_CLIENT_ID="ABC123456"
+
 
 
 
