--- a/.env.development
+++ b/.env.development
@@ -1,12 +1,12 @@
 # Base url
 NEXT_PUBLIC_BASE_URL=http://localhost:3001/
 
-NEXT_PUBLIC_JOKO_OATH_URL=https://oauth-nestjs-api.letgo.com.tw/
+NEXT_PUBLIC_JOKO_OATH_URL=http://localhost:3000/
 
 # CDN Stuff
 NEXT_PUBLIC_CDN_ASSETS_URL=/
 
-
+NEXT_PUBLIC_JOKO_OATH_CLIENT_ID="ABC123456"
 
 
 
