--- a/.env.production
+++ b/.env.production
@@ -3,3 +3,5 @@ NEXT_PUBLIC_BASE_URL=https://oauth-nextjs.letgo.com.tw/
 NEXT_PUBLIC_JOKO_OATH_URL=https://oauth-nestjs-api.letgo.com.tw/
 
 NEXT_PUBLIC_CDN_ASSETS_URL=/
+
+NEXT_PUBLIC_JOKO_OATH_CLIENT_ID="ABC123456"
